[metadata]
name = powersweep 
version = 0.1.0
description = Python module for launching PyTorch Lightning training jobs across separately configured GPUs.
author = Michael C. Tierney
email = michael.kotson@ll.mit.edu

[options]
packages = find:
package_dir = 
    =src
python_requires = >= 3.9
setup_requires =
    setuptools
install_requires =
    numpy >= 1.20.0
    torch >= 1.12.1
    pytorch-lightning >= 1.7.7
    torchvision >= 0.13.1
    pytest
    hydra-zen >= 0.9.0rc5
    
[options.extras_require]
tests =
    pytest
notebook =
    jupyterlab
    matplotlib

[options.packages.find]
where = src
exclude = tests*
