# Copyright (c) 2022 Massachusetts Institute of Technology
# SPDX-License-Identifier: MIT
[metadata]
name = tse 
version = 0.1.0
description = Python module for estimating speed and performance of ML models from loss curves of abbreviated training.

[options]
packages = find:
package_dir = 
    =src
python_requires = >= 3.9
setup_requires =
    setuptools
install_requires =
    numpy >= 1.20.0
    pandas >= 1.5.2
    scipy >= 1.9.3
    
[options.extras_require]
tests =
    pytest
notebook =
    jupyterlab
    matplotlib

[options.packages.find]
where = src
exclude = tests*
